syntax = "proto3";

package gpt;

option go_package = "services/telegram-bot/lib";

service GptService {
  rpc ask (AskRequest) returns (AskResponse) {}
  rpc clearHistory (ClearHistoryRequest) returns (ClearHistoryResponse) {}
  rpc clearIndex (ClearIndexRequest) returns (ClearIndexResponse) {}
}

message AskRequest {
  string query = 1;
}

message AskResponse {
  string answer = 1;
}

message ClearHistoryRequest {}

message ClearHistoryResponse {}

message ClearIndexRequest {}

message ClearIndexResponse {}
